objects/ssot__GoalAssignmentDetail__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetailCodeId__c</fullName>
        <label>Detail Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetailCodeObject__c</fullName>
        <label>Detail Code Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetailRecordId__c</fullName>
        <label>Detail Record</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetailRecordObject__c</fullName>
        <label>Detail Record Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetailType__c</fullName>
        <label>Detail Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GoalAssignmentId__c</fullName>
        <label>Goal Assignment</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Goal Assignment Detail Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1734838462026_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GoalAssignmentDetail_DetailCodeId_ma_rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>GoalAssignmentDetail_DetailCodeId_ma_rel</relationshipLabel>
        <relationshipName>rel_1734838462026_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1734838463203_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GoalAssignmentDetail_DetailCodeId_ma_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>GoalAssignmentDetail_DetailCodeId_ma_rel</relationshipLabel>
        <relationshipName>rel_1734838463203_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1734838515603_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GoalAssignmentDetail_DetailRecordId__rel</label>
        <referenceTo>ssot__PatientMedicationStatement__dlm</referenceTo>
        <relationshipLabel>GoalAssignmentDetail_DetailRecordId__rel</relationshipLabel>
        <relationshipName>rel_1734838515603_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>